objects/Dealer_Approval__c.object
<CustomObject>
    <description>Approval is required on any project with monthly recurring revenue.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer Approvals</relationshipLabel>
        <relationshipName>Dealer_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Project__r.Business_Unit__c</formula>
        <inlineHelpText>Pulls from the Project&apos;s Business Unit.</inlineHelpText>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Dealer Approvals</relationshipLabel>
        <relationshipName>Dealer_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Decision__c</fullName>
        <label>Dealer Decision</label>
        <picklist>
            <picklistValues>
                <fullName>I agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Denial_Notes__c</fullName>
        <label>Dealer Denial Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Dealer_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_520_Quote__c</referenceTo>
        <relationshipLabel>Dealer Approvals</relationshipLabel>
        <relationshipName>Dealer_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Dealer Approval</label>
    <nameField>
        <displayFormat>DA-{00000000}</displayFormat>
        <label>Dealer Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Approvals</pluralLabel>
    <recordTypes>
        <fullName>Implementation</fullName>
        <active>true</active>
        <label>Implementation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Websites</fullName>
        <active>true</active>
        <label>Websites</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>